<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="action_settings">Opções</string>
    <string name="alterarNome">Alterar nome</string>
    <string name="testarBluetooth">Teste</string>
    <string name="btConectar">Conectar protótipo</string>
    <string name="btLog">Falhas</string>
    <string name="txtChassi">Chassi:</string>
    <string name="txtNEcu">Número ECU:</string>
    <string name="txtInfo3">Informação 3:</string>
    <string name="txtInfo4">Informação 4:</string>
    <string name="btSobre">Sobre o aplicativo</string>
    <string name="btSair">Sair</string>
    <string name="btInfo">Informações</string>
    <string name="btParametro">Parâmetros</string>
    <string name="icon_back">Voltar</string>
    <string name="title_activity_configuracoes">Configurações</string>
    <string name="gerar_relatorio">Gerar relatório</string>
    <string name="filtrar">Filtrar</string>
    <string name="apagar_falhas">Apagar falhas</string>
    <string name="txt_sobre">Este aplicativo foi desenvolvido como um trabalho de graduação.
        Seu objetivo é auxiliar qualquer pessoa realizar um diagnóstico simples no veículo (Volkswagen
        Gol 2007).
    </string>
    <string name="txt_versao">Versão : 1.0.0</string>
    <string name="btSensor1">Sensor 1</string>
    <string name="btSensor2">Sensor 2</string>
    <string name="btSensor3">Sensor 3</string>
    <string name="btSensor4">Sensor 4</string>
    <string name="btSensor5">Sensor 5</string>
    <string name="btSensor6">Sensor 6</string>
    <string name="btSensor7">Sensor 7</string>
    <string name="dispositivos_pareados">Dispositivos já pareados</string>
    <string name="dispositivos_encontrados">Dispositivos encontrados</string>
    <string name="select_device">Selecione um dispositivo</string>
    <string name="none_paired">Nenhum dispostivos pareados</string>
    <string name="none_found">Nenhum dispostivo encontrado</string>
    <string name="scanning">Buscando dispositivos...</string>
    <string name="button_scan">Procurar dispositivos</string>

    <string name="not_connected">Você não está conectado à um dispositivo</string>
    <string name="bt_not_enabled_leaving">Bluetooth não está disponivel. O aplicativo será fechado</string>
    <string name="title_connecting">Conectando...</string>
    <string name="title_connected_to">Conectado à <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">Desconectado</string>
    <string name="title_activity_tela_chat">ActivityTelaChat</string>
    <string name="statusConector">Status: </string>
</resources>